--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /TestApp/TestApp.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 /TestApp/TestApp.xcodeproj/project.xcworkspace/xcuserdata/oleygen.xcuserdatad/UserInterfaceState.xcuserstate
 /TestApp/TestApp.xcodeproj/xcuserdata/oleygen.xcuserdatad/xcschemes/xcschememanagement.plist
+/TestApp/TestApp.xcodeproj/xcuserdata
