Improved project structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /TestApp/TestApp.xcodeproj/project.xcworkspace/xcuserdata/oleygen.xcuserdatad/UserInterfaceState.xcuserstate
 /TestApp/TestApp.xcodeproj/xcuserdata/oleygen.xcuserdatad/xcschemes/xcschememanagement.plist
 /TestApp/TestApp.xcodeproj/xcuserdata
+.DS_Store
